--- a/02-crudo-bootstrap/scss/my-bootstrap.scss
+++ b/02-crudo-bootstrap/scss/my-bootstrap.scss
@@ -5,5 +5,8 @@ $warning: #f7c040;
 $enable-rounded: false;
 $font-family-base: "Raleway", sans-serif;
 
+// navbar:
+$light: #fff;
+
 // import
 @import "./bootstrap/bootstrap.scss";
