--- a/02-crudo-bootstrap/css/style.css
+++ b/02-crudo-bootstrap/css/style.css
@@ -4,4 +4,9 @@ body {
 .navbar a {
   font-weight: bold; }
 
+.social {
+  bottom: 0; }
+  .social i {
+    font-size: 4rem; }
+
 /*# sourceMappingURL=style.css.map */
