a couple of sections written

--- a/02-crudo-bootstrap/css/style.css
+++ b/02-crudo-bootstrap/css/style.css
@@ -1,6 +1,3 @@
-body {
-  background-color: yellow; }
-
 .navbar a {
   font-weight: bold; }
 
@@ -8,5 +5,23 @@ body {
   bottom: 0; }
   .social i {
     font-size: 4rem; }
+
+section h2 {
+  position: relative; }
+  section h2:after {
+    content: "";
+    position: absolute;
+    bottom: -20px;
+    border-bottom: 1px solid black;
+    width: 9%;
+    left: 0;
+    margin-bottom: 1.2rem; }
+
+.col-md-6.text-right h2:after {
+  right: 0;
+  left: unset; }
+
+section.yellow-background {
+  background-color: #ffce4d; }
 
 /*# sourceMappingURL=style.css.map */
