--- a/02-crudo-bootstrap/scss/style.scss
+++ b/02-crudo-bootstrap/scss/style.scss
@@ -1,7 +1,8 @@
 // Peter bootstrap theme
 
+$yellow: #ffce4d;
+
 body {
-    background-color: yellow;
 }
 
 // Navbar Styling
@@ -14,5 +15,34 @@ body {
 
     i {
         font-size: 4rem;
+    }
+}
+
+section h2 {
+    position: relative;
+
+    &:after {
+        content: "";
+        position: absolute;
+        bottom: -20px;
+        border-bottom: 1px solid black;
+        width: 9%;
+        left: 0;
+        margin-bottom: 1.2rem;
+    }
+}
+
+.col-md-6.text-right {
+    h2 {
+        &:after {
+            right: 0;
+            left: unset;
+        }
+    }
+}
+
+section {
+    &.yellow-background {
+        background-color: $yellow;
     }
 }
