--- a/02-crudo-bootstrap/scss/my-bootstrap.scss
+++ b/02-crudo-bootstrap/scss/my-bootstrap.scss
@@ -6,7 +6,7 @@ $enable-rounded: false;
 $font-family-base: "Raleway", sans-serif;
 
 // navbar:
-$light: #fff;
+$light: #6dccaa;
 
 // import
 @import "./bootstrap/bootstrap.scss";
