i've written the pricing section

--- a/02-crudo-bootstrap/css/style.css
+++ b/02-crudo-bootstrap/css/style.css
@@ -47,4 +47,9 @@ section.brown-background {
 tr {
   border-bottom: 2px dotted #ffce4d; }
 
+.btn-outline-dark:hover {
+  color: #fff;
+  background-color: #ffce4d;
+  border-color: #ffce4d; }
+
 /*# sourceMappingURL=style.css.map */
