--- a/02-crudo-bootstrap/scss/style.css
+++ b/02-crudo-bootstrap/scss/style.css
@@ -28,7 +28,7 @@ section h2 {
   left: unset; }
 
 section.yellow-background {
-  background-color: #ffce4d; }
+  background-color: hotpink; }
 
 section.green-background {
   background-color: #6dccaa; }
